@@ -145,11 +145,6 @@ void LadspaWrapperBuffer::RemovePortsAndControls()
 	_outputControls.clear();
 
 	_outputControlValues.clear();
-
-	GetInPorts().Clear();
-	GetOutPorts().Clear();
-	GetInControls().Clear();
-	GetOutControls().Clear();
 }
 
 void LadspaWrapperBuffer::ConfigurePortsAndControls()
